using offsetLeft/Top for graph tooltips

--- a/junit.html
+++ b/junit.html
@@ -4069,9 +4069,9 @@ function createForcesGraphOn(elementId, graph, projectName) {
     var header = appendBlockElementTo(rootElement, width);
 
     var svg = rootElement.append("svg").attr("width", width).attr("height", height);
+    var svgPos = svg[0][0];
     var svgLinks = svg.append("g");
     var svgNodes = svg.append("g");
-    var svgPos = svg[0][0].getBoundingClientRect();
 
     svg.append("rect")
             .attr("width", width).attr("height", height)
@@ -4097,16 +4097,16 @@ function createForcesGraphOn(elementId, graph, projectName) {
                 .attr("class", "tooltip")
                 .html("Unfortunately, there is nothing to show.")
                 .style("position", "absolute")
-                .style("top", function (){ return svgPos.top + (svgPos.height / 2) - (this.offsetHeight / 2) + "px"; })
-                .style("left", function (){ return svgPos.left + (svgPos.width / 2) - (this.offsetWidth / 2) + "px"; });
+                .style("top", function (){ return svgPos.offsetTop + (svgPos.offsetHeight / 2) - (this.offsetHeight / 2) + "px"; })
+                .style("left", function (){ return svgPos.offsetLeft + (svgPos.offsetWidth / 2) - (this.offsetWidth / 2) + "px"; });
 
     var handledByNode = false;
     var onMouseOverNode = function (d) {
         tooltip.html(showLongFileNames ? d.name : dropPath(d.name))
                 .style("opacity", .9)
                 .style("position", "absolute")
-                .style("left", svgPos.left + parseInt(d.x + 18) + "px")
-                .style("top", svgPos.top + parseInt(d.y - 12) + "px");
+                .style("left", svgPos.offsetLeft + d.x + 18 + "px")
+                .style("top", svgPos.offsetTop + d.y - 18 + "px");
     };
     var onMouseOutOfNode = function() {
         tooltip.style("opacity", .0);
@@ -4293,13 +4293,13 @@ function createForcesGraphOn(elementId, graph, projectName) {
         if (nodesByGroup[2] == null) nodesByGroup[2] = [];
 
         selectedNodesLabel
-                .style("left", svgPos.left + 3 + "px")
-                .style("top", svgPos.top + 3 + "px")
+                .style("left", svgPos.offsetLeft + 3 + "px")
+                .style("top", svgPos.offsetTop + 3 + "px")
                 .html(nodesByGroup[1].map(function (d) { return showLongFileNames ? d.name : dropPath(d.name); }).sort().join("<br/>"))
                 .style("opacity", (nodesByGroup[1].length > 0 ? 1 : 0));
         var pos = selectedNodesLabel[0][0].getBoundingClientRect();
         selectedNodesLabel2
-                .style("left", svgPos.left + 3 + "px")
+                .style("left", svgPos.offsetLeft + 3 + "px")
                 .style("top", pos.top + pos.height + 3 + "px")
                 .html(nodesByGroup[2].map(function (d) { return showLongFileNames ? d.name : dropPath(d.name); }).sort().join("<br/>"))
                 .style("opacity", (nodesByGroup[2].length > 0 ? 1 : 0));
