updated template text for intellij

--- a/idea_template.html
+++ b/idea_template.html
@@ -30,18 +30,21 @@
             This is analysis and visualization of <a href="https://github.com/JetBrains/intellij-community">IntelliJ community edition</a>
             code history using <a href="https://github.com/dkandalov/code-history-mining">this IntelliJ plugin</a> and <a href="http://d3js.org/">d3.js</a>.
         </p>
+        <p>
+            There is no particular method behind this so if you have a suggestion for visualisation,
+            please feel free to <a href="https://github.com/dkandalov/code-history-mining/issues/new">create an issue</a>.
+        </p>
 
         <h4>Change size chart</h4>
-        Shows amount of commit by day/week.
+        Shows amount of commit by day/week. Red line is one month moving average.
         <br/>
-        Note downward trend around new year (which is probably the most celebrated public holiday in Russia).
-        There are also spikes around November/December which somewhat correlate with major IntelliJ releases.
+        Note downward trends around New Year and spikes in November/December which somewhat correlate with major releases.
         <p id="change-size-chart"></p>
         <br/><br/>
 
         <h4>Amount of committers</h4>
         Shows how many different people committed over month/week/day.
-        The idea is to see how many people collaborate or contribute to the project (it's open for interpretation).
+        The idea is to see how many people collaborate or contribute to the project. It's open for interpretation though.
         <p id="amount-of-committers-chart"></p>
         <br/><br/>
 
